show node breadcrumb; allow deny in acls

--- a/traversal/static/pylons.css
+++ b/traversal/static/pylons.css
@@ -51,8 +51,8 @@ body h6{font-family:"NeutonRegular","Lucida Grande",Lucida,Verdana,sans-serif;fo
 .bottom{padding-top:50px;}
 #left{width:350px;float:left;padding-right:25px;}
 #right{width:350px;float:right;padding-left:25px;}
-.align-left{text-align:left;}
-.align-right{text-align:right;}
+.align-left{text-align:left; float:left;}
+.align-right{text-align:right; float:right;}
 .align-center{text-align:center;}
 ul.links{margin:0;padding:0;}
 ul.links li{list-style-type:none;font-size:14px;}
